# qbl

./: CMakeLists.txt  qbl.cfg  toolchain.cmake
src/: elf.hpp  main.cpp  memory.cpp  memory.hpp
src/uefi/: bio.hpp  dio.hpp  protocols.hpp  stip.hpp  stop.hpp  systemTable.hpp  types.hpp
tests/basicKernel/: CMakeLists.txt  kernel.cmake  kernel.ld
tests/basicKernel/src/: main.cpp
